# code-context-v2

./: .env.example  .gitignore  .mcp.json.example  AGENTS.md  LICENSE  README.md  SPEC.md  cc2.sh  docker-compose.yml  pyproject.toml
cli/: __init__.py  main.py  manage.py  watcher.py
docs/: spec-ast-hierarchical-retrieval-roadmap.md
scripts/: analyze_logs.py  benchmark_models.py  benchmark_retrieval.py  init_books.sql  init_db.sql  reset_db.py
scripts/baselines/: post-parser-fix.json  pre-fix-signatures.json  pre-parser-fix.json
src/code_context/: __init__.py  config.py  indexer.py  server.py
src/code_context/books/: __init__.py  indexer.py  parser.py
src/code_context/chunking/: __init__.py  languages.py  models.py  parser.py
src/code_context/db/: __init__.py  pool.py  schema.py
src/code_context/embedding/: __init__.py  voyage.py
src/code_context/retrieval/: __init__.py  pipeline.py
tests/: __init__.py  test_indexer.py  test_integration.py  test_parser.py  test_rerank_intents.py  test_retrieval_controls.py
