[project]
name = "code-context"
version = "0.1.0"
description = "SOTA Context Engineering MCP Server for Codebases"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    # MCP Server
    "fastmcp>=2.3.0",

    # Database
    "asyncpg>=0.30.0",
    "pgvector>=0.3.6",

    # Embeddings & Reranking
    "voyageai>=0.3.2",
    "httpx>=0.28.0",

    # AST Parsing
    "tree-sitter>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-java>=0.23.0",

    # Core
    "pydantic>=2.10.0",
    "pydantic-settings>=2.7.0",

    # Utilities
    "blake3>=1.0.0",
    "tiktoken>=0.8.0",
    "rich>=13.9.0",

    # Books parsing
    "ebooklib>=0.18",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]
cli = [
    "watchdog>=6.0.0",
]

[project.scripts]
code-context = "code_context.server:main"
code-context-cli = "cli.main:main"
code-context-manage = "cli.manage:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/code_context", "cli"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
